# portfolio

./: '  Cargo.toml
src/: lib.rs  main.rs
src/commands/: commands.rs
src/cv/data/: education.rs  experience.rs  link.rs  mod.rs  personal.rs
src/cv/functions/: all_information.rs  contact_information.rs  education.rs  experience.rs  fn_all_information.rs  fn_contact_information.rs  fn_experience.rs  fn_link.rs  fn_personal_information.rs  fn_skill.rs  link.rs  mod.rs  personal_information.rs  skill.rs  traits.rs  wrap_text.rs
src/cv/functions/contact/: contact.rs  contact_information.rs  mod.rs  new.rs
src/cv/functions/helper/: mod.rs
src/cv/structs/: all_information.rs  bullet_point.rs  contact_information.rs  cv_data.rs  education.rs  experience.rs  link.rs  mod.rs  personalinformation.rs  skill.rs
src/start/: mod.rs
src/start/data/: info.rs  info_databricks.rs  info_mobilepay.rs  info_uber.rs  mod.rs  resume.rs
src/start/functions/: company.rs  cover_letter.rs  mod.rs  paragraf.rs  person.rs  start.rs
src/start/structs/: cover_letter.rs  mod.rs
src/ui/: view.rs
