[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"
authors= ["Andreas Barbesgaard <Abarbesgaard@gmail.com>"]
repository = "https://www.github.com/abarbesgaard/portfolio"

[[bin]]
name = "portfolio"
path = "src/main.rs"

[dependencies]
inquire = "0.7.5"
opener = "0.6"
urlencoding = "2.1"
clap = { version = "4.5.46", features = ["derive"] }
uuid =  {version = "1.0", features = ["v4", "serde"] }
colored = "*"
